--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@
 
         async function sendToServer(userInput) {
             try {
-                const response = await fetch('http://127.0.0.1:5000/ask', {
+                const response = await fetch('/ask', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ message: userInput }),
